--- a/.github/workflows/verify.yaml
+++ b/.github/workflows/verify.yaml
@@ -1,61 +1,23 @@
-# This is a basic workflow to help you get started with Actions
+name: Verify
 
-name: CI
-
-# Controls when the workflow will run
+# Controls when the action will run. Triggers the workflow on push or pull request
+# events but only for the main branch
 on:
-  # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-    branches: [ "main" ]
-  pull_request:
-    branches: [ "main" ]
-
-  # Allows you to run this workflow manually from the Actions tab
-  workflow_dispatch:
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
-    # The type of runner that the job will run on
-    runs-on: ubuntu-latest
+  verify:
+    uses: ./.github/workflows/verify-workflow.yaml
+    secrets:
+      IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
+      GITOPS_USERNAME: ${{ secrets.GITOPS_USERNAME }}
+      GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
-    steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
-
-      # Runs a single command using the runners shell
-      - name: Run a one-line script
-        run: echo Hello, world!
-
-      # Runs a set of commands using the runners shell
-      - name: Run a multi-line script
-        run: |
-          echo Add other actions to build,
-          echo test, and deploy your project.
-#
-#
-#name: Verify
-#
-## Controls when the action will run. Triggers the workflow on push or pull request
-## events but only for the main branch
-#on:
-#  push:
-#    branches: [ main ]
-#
-## A workflow run is made up of one or more jobs that can run sequentially or in parallel
-#jobs:
-#  #  verify:
-#  #    uses: ./.github/workflows/verify-workflow.yaml
-#  #    secrets:
-#  #      IBMCLOUD_API_KEY: ${{ secrets.IBMCLOUD_API_KEY }}
-#  #      GITOPS_USERNAME: ${{ secrets.GITOPS_USERNAME }}
-#  #      GITOPS_TOKEN: ${{ secrets.GITOPS_TOKEN }}
-#
-#  release:
-#    needs: [verify]
-#    uses: cloud-native-toolkit/action-workflows/.github/workflows/release-module.yaml@v1
-#    secrets:
-#      TOKEN: ${{ secrets.TOKEN }}
+  release:
+    needs: [verify]
+    uses: cloud-native-toolkit/action-workflows/.github/workflows/release-module.yaml@v1
+    secrets:
+      TOKEN: ${{ secrets.TOKEN }}
 
