--- a/305-cloud-pak-for-data-foundation/bom.yaml
+++ b/305-cloud-pak-for-data-foundation/bom.yaml
@@ -41,19 +41,22 @@ spec:
       version: v1.11.2
       variables:
         - name: name
-          value: ibm-common-services
+          alias: ibm_common_services_namespace
+          scope: global
     - name: gitops-namespace
       alias: cpd_operators_namespace
       version: v1.11.2
       variables:
         - name: name
-          value: cpd-operators
+          alias: cpd_operators_namespace
+          scope: global
     - name: gitops-namespace
       alias: cp4d_namespace
       version: v1.11.2
       variables:
         - name: name
-          value: cp4d
+          alias: cp4d_namespace
+          scope: global
     - name: gitops-repo
       alias: gitops_repo
       version: v1.18.1
@@ -65,6 +68,18 @@ spec:
         registry. Visit https://myibm.ibm.com/products-services/containerlibrary
         to get the key
       sensitive: true
+    - name: ibm_common_services_namespace
+      type: string
+      description: The value that should be used for the namespace
+      defaultValue: ibm-common-services
+    - name: cpd_operators_namespace
+      type: string
+      description: The value that should be used for the namespace
+      defaultValue: cpd-operators
+    - name: cp4d_namespace
+      type: string
+      description: The value that should be used for the namespace
+      defaultValue: cp4d
     - name: gitops_repo_host
       type: string
       description: The host for the git repository.
