--- a/200-openshift-gitops/bom.yaml
+++ b/200-openshift-gitops/bom.yaml
@@ -14,7 +14,7 @@ spec:
   modules:
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.20.2
+      version: v1.21.0
     - name: argocd-bootstrap
       alias: argocd-bootstrap
       version: v1.12.0
@@ -25,24 +25,26 @@ spec:
           value: maximo
     - name: gitops-cluster-config
       alias: gitops-cluster-config
-      version: v1.0.0
+      version: v1.1.0
     - name: gitops-console-link-job
       alias: gitops-console-link-job
       version: v1.4.6
     - name: gitops-namespace
       alias: toolkit_namespace
-      version: v1.11.2
+      version: v1.12.0
       default: true
       variables:
         - name: name
           value: toolkit
     - name: ocp-login
       alias: cluster
-      version: v1.4.0
+      version: v1.6.0
     - name: olm
       version: v1.3.2
     - name: sealed-secret-cert
       version: v1.0.1
+    - name: util-clis
+      version: v1.16.8
   variables:
     - name: gitops_repo_host
       type: string
