--- a/310-cloud-pak-for-data-db2uoperator/bom.yaml
+++ b/310-cloud-pak-for-data-db2uoperator/bom.yaml
@@ -40,13 +40,15 @@ spec:
           optional: true
     - name: gitops-namespace
       alias: gitops-db2u_namespace
-      version: v1.11.2
+      version: v1.12.0
       variables:
         - name: name
           value: gitops-db2u
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.18.1
+      version: v1.21.0
+    - name: util-clis
+      version: v1.16.9
   variables:
     - name: cpd_operators_namespace
       type: string
@@ -54,11 +56,22 @@ spec:
       defaultValue: cpd-operators
     - name: gitops_repo_host
       type: string
-      description: The host for the git repository.
+      description: >-
+        The host for the git repository. The git host used can be a GitHub,
+        GitHub Enterprise, Gitlab, Bitbucket, Gitea or Azure DevOps server. If
+        the host is null assumes in-cluster Gitea instance will be used.
       defaultValue: ''
     - name: gitops_repo_org
       type: string
-      description: The org/group where the git repository exists/will be provisioned.
+      description: >-
+        The org/group where the git repository exists/will be provisioned. If
+        the value is left blank then the username org will be used.
+      defaultValue: ''
+    - name: gitops_repo_project
+      type: string
+      description: >-
+        The project that will be used for the git repo. (Primarily used for
+        Azure DevOps repos)
       defaultValue: ''
     - name: gitops_repo_username
       type: string
