--- a/320-cloud-pak-for-data-db2oltp/bom.yaml
+++ b/320-cloud-pak-for-data-db2oltp/bom.yaml
@@ -58,7 +58,9 @@ spec:
           value: gitops-cp-db2oltp
     - name: gitops-repo
       alias: gitops_repo
-      version: v1.18.1
+      version: v1.21.0
+    - name: util-clis
+      version: v1.16.9
   variables:
     - name: cpd_operators_namespace
       type: string
@@ -74,11 +76,22 @@ spec:
       defaultValue: ibm-common-services
     - name: gitops_repo_host
       type: string
-      description: The host for the git repository.
+      description: >-
+        The host for the git repository. The git host used can be a GitHub,
+        GitHub Enterprise, Gitlab, Bitbucket, Gitea or Azure DevOps server. If
+        the host is null assumes in-cluster Gitea instance will be used.
       defaultValue: ''
     - name: gitops_repo_org
       type: string
-      description: The org/group where the git repository exists/will be provisioned.
+      description: >-
+        The org/group where the git repository exists/will be provisioned. If
+        the value is left blank then the username org will be used.
+      defaultValue: ''
+    - name: gitops_repo_project
+      type: string
+      description: >-
+        The project that will be used for the git repo. (Primarily used for
+        Azure DevOps repos)
       defaultValue: ''
     - name: gitops_repo_username
       type: string
