--- a/210-ibm-portworx-storage/bom.yaml
+++ b/210-ibm-portworx-storage/bom.yaml
@@ -20,16 +20,16 @@ spec:
           ref: gitea_namespace
     - name: gitops-ibm-portworx
       alias: gitops-ibm-portworx
-      version: v0.3.0
+      version: v0.4.0
     - name: gitops-namespace
       alias: gitea_namespace
-      version: v1.12.1
+      version: v1.12.2
       variables: &ref_0
         - name: name
           value: gitea
     - name: gitops-namespace
       alias: portworx_namespace
-      version: v1.12.1
+      version: v1.12.2
       default: true
       variables:
         - name: name
@@ -51,6 +51,8 @@ spec:
       variables: *ref_0
     - name: gitops-ibmcloud-operator
       version: v0.2.2
+    - name: util-clis
+      version: v1.16.9
   variables:
     - name: ibmcloud_api_key
       type: string
