--- a/315-cloud-pak-for-data-db2wh/bom.yaml
+++ b/315-cloud-pak-for-data-db2wh/bom.yaml
@@ -52,13 +52,15 @@ spec:
           optional: true
     - name: gitops-namespace
       alias: gitops-cp-db2wh_namespace
-      version: v1.12.1
+      version: v1.12.2
       variables:
         - name: name
           value: gitops-cp-db2wh
     - name: gitops-repo
       alias: gitops_repo
       version: v1.21.0
+    - name: util-clis
+      version: v1.16.9
   variables:
     - name: cpd_operators_namespace
       type: string
