--- a/300-cloud-pak-for-data-entitlement/bom.yaml
+++ b/300-cloud-pak-for-data-entitlement/bom.yaml
@@ -38,13 +38,15 @@ spec:
           scope: global
     - name: gitops-namespace
       alias: entitlements_namespace
-      version: v1.12.3
+      version: v1.12.2
       variables:
         - name: name
           value: entitlements
     - name: gitops-repo
       alias: gitops_repo
       version: v1.21.0
+    - name: util-clis
+      version: v1.16.9
   variables:
     - name: entitlement_key
       type: string
