--- a/300-cloud-pak-for-data-foundation/bom.yaml
+++ b/300-cloud-pak-for-data-foundation/bom.yaml
@@ -15,7 +15,7 @@ spec:
   modules:
     - name: gitops-cp4d-deployer
       alias: gitops-cp4d-deployer
-      version: v0.0.2
+      version: v0.0.4
       dependencies:
         - name: namespace
           ref: cloud_pak_deployer_namespace
@@ -153,7 +153,7 @@ spec:
       value: ocs-storagecluster-cephfs
     - name: cluster_name
       type: string
-      description: The cluster name where the cloud pak deployer will be deployed
+      description: The namespace where the cloud pak deployer will be deployed
       value: cloud-pak-for-data
     - name: cluster_ingress
       type: string
@@ -161,7 +161,7 @@ spec:
     - name: cpd_version
       type: string
       description: The CP4D version to deploy.
-      value: 4.5.0
+      value: 4.6.0
     - name: entitlement_key
       type: string
       description: The Cloud Pak entitlement key
@@ -171,7 +171,7 @@ spec:
       value: false
     - name: install_analyticsengine
       type: bool
-      description: Install analyticsengine cartridge
+      description: Install Analytics Engine cartridge
       value: false
     - name: install_bigsql
       type: bool
